syntax = "proto3";

package lessworkflow.order;

option go_package = "github.com/albertsen/lessworkflow/gen/proto/order";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";


message Order {
  string status = 1;
  MonetaryAmount total_price = 2;  
  MonetaryAmount total_tax = 3;
  repeated Tax taxes = 4;
  Address delivery_address = 5;
  Address billing_address = 6;
  repeated PaymentDetails payment_details = 7;
  repeated LineItem line_items = 8;
  map<string, google.protobuf.Any> properties = 9;
}

message Address {
  string name = 1;
  string address_line1 = 2;
  string address_line2 = 3;
  string post_code = 4;
  string city = 5;
  string country_code = 6;
  map<string, google.protobuf.Any> properties = 7;
}

message PaymentDetails {
  string subscription_id = 1;
  string transaction_code = 2;
  MonetaryAmount amount = 3;
  map<string, google.protobuf.Any> properties = 4;
}

message LineItem {
  string product_id = 1;
  string product_description = 2;
  int32 count = 3;
  MonetaryAmount item_price = 4;
  MonetaryAmount total_price = 5;
  repeated Tax item_taxes = 6;
  repeated Tax total_taxes = 7;
  map<string, google.protobuf.Any> properties = 8;
}

message Tax {
  string code = 1;
  MonetaryAmount amount = 2;
}

message MonetaryAmount {
  int64 value = 1;
  string currency = 2;
};